--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,12 +4,23 @@
   box-sizing: border-box;
 }
 
+
+input,
+textarea,
+button,
+select,
+img,
+a {
+  -webkit-tap-highlight-color: transparent;
+}
+
 body {
-  background-color: #515151;
+  background: linear-gradient(145.6deg, rgb(237, 162, 211) 30.2%, rgb(168, 236, 215) 71.3%)
 }
 
 
 .shiritori {
+  min-height: 100vh;
   max-width: 670px;
   padding: 0 15px;
   width: 100%;
@@ -22,26 +33,77 @@ body {
     justify-content: center;
     align-items: center;
     margin-bottom: 45px;
+    color: #fff;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(234, 164, 212);
+
   }
 
   &__input {
     position: relative;
+    height: 50px;
+    margin-bottom: 25px;
 
     &-field {
       display: block;
+      height: 100%;
       width: 100%;
       border-radius: 5px;
-      padding: 20px;
+      padding: 0 15px;
       font-size: 25px;
       position: absolute;
       top: 0;
       left: 0;
+      border: 1px solid rgb(249, 16, 249);
+      outline: none;
+      background: linear-gradient(68.6deg, rgb(181, 255, 255) 1.8%, rgb(252, 165, 241) 100.5%);
+
+      text-shadow:
+        2px 2px 2px #ffffff,
     }
 
     &-button {
-      
+      position: absolute;
+      width: 28px;
+      height: 28px;
+      border: none;
+      background-color: transparent;
+      top: 50%;
+      right: 15px;
+      z-index: 10;
+      background-image: url('../icons/done.svg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      transform: translateY(-50%);
+      cursor: pointer;
     }
 
   }
 
+  &__functionality {
+    &-btns {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 50px;
+    }
+    &-btn{
+      height: 35px;
+      width: 75px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 1px solid rgb(249, 16, 249);
+      border-radius: 5px;
+      cursor: pointer;
+      background-color: #fff;
+      font-size: 16px;
+    }
+    &-result{
+      display: flex;
+      justify-content: center;
+      font-size: 24px;
+    }
+  }
 }
