--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   margin-bottom: 45px;
   color: #fff;
   -webkit-text-stroke-width: 1px;
@@ -39,6 +40,7 @@ body {
   position: relative;
   height: 50px;
   margin-bottom: 25px;
+  width: 100%;
 }
 .shiritori__input-field {
   display: block;
@@ -94,4 +96,10 @@ body {
   justify-content: center;
   font-size: 24px;
   text-align: center;
+}
+
+@media (max-width: 700px) {
+  .shiritori__title {
+    font-size: 54px;
+  }
 }/*# sourceMappingURL=style.css.map */
