--- a/styles/style.scss
+++ b/styles/style.scss
@@ -32,6 +32,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     margin-bottom: 45px;
     color: #fff;
     -webkit-text-stroke-width: 1px;
@@ -43,7 +44,7 @@ body {
     position: relative;
     height: 50px;
     margin-bottom: 25px;
-
+    width: 100%;
     &-field {
       display: block;
       height: 100%;
@@ -104,6 +105,14 @@ body {
       display: flex;
       justify-content: center;
       font-size: 24px;
+      text-align: center;
+    }
+  }
+}
+@media (max-width:700px){
+  .shiritori{
+    &__title{
+      font-size: 54px;
     }
   }
 }
